packages/astro/e2e/fixtures/errors/src/components/solid/SolidSyntaxError.jsx
import { h } from 'solid-js/web'

export default function ReactSyntaxError() {
  return (<div></div></div>);
}
